--- a/src/main/resources/templates/changePassword.html
+++ b/src/main/resources/templates/changePassword.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div th:insert="~{fragments/navBar.html :: body}"></div>
-<div class="col-md-6 mx-auto">
+<div class="m-4 mx-auto">
     <h1>Change Password</h1>
     <form th:object="${changePasswordDto}" action="/changePassword" method="post">
         <div class="mb-3">
