--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Error</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-<h1>UNDER CONSTRUCTION!</h1>
+
+<div class="container mt-3">
+    <h1>SOME ERROR!</h1>
+    <a href="/home" type="button" class="btn btn-primary btn-lg">Back to home</a>
+</div>
 </body>
 </html>
