--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -5,15 +5,14 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="/css/style.css">
+<!--    <link rel="stylesheet" href="/css/style.css">-->
 </head>
 <body>
 <div class="m-4">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-image: url('/img/canvas.jpg');
-    background-repeat: repeat;">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark "  style="border-radius: 150px"  >
         <div class="container-fluid">
             <a href="/home" class="navbar-brand">
-                <img class="navbar-logo" src="/img/qb-logo-round.png" style="height: 150px">
+                <img class="navbar-logo" src="/img/quick_bite.png" style="height: 150px;  ">
             </a>
 
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -21,12 +20,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div  th:object="${userDto}" class="navbar-nav">
-                    <a href="/yourProfile" th:if="${fullName != null}" th:text="${fullName}" class="nav-item nav-link" style="font-weight: bold; color: red;">Your Profile</a>
+                    <a href="/yourProfile" th:if="${fullName != null}" th:text="${fullName}" class="nav-item nav-link" style="font-weight: bold; color: White;">Your Profile</a>
                     <a  th:object="${activePage}" th:if="${activePage != '/sellerPage'}" sec:authorize="hasRole('SELLER')" href="/sellerPage" class="nav-item nav-link">Your Restaurants</a>
                     <a  th:object="${activePage}" th:if="${activePage == '/sellerPage'}" sec:authorize="hasRole('SELLER')" href="/addRestaurant" class="nav-item nav-link">Add Restaurant</a>
                     <a sec:authorize="hasRole('SELLER')" href="/orderDashboard" class="nav-item nav-link">Order Dashboard</a>
                 </div>
-                <div class="navbar-nav ms-auto">
+                <div class="navbar-nav ms-auto mx-5">
                     <a sec:authorize="isAnonymous()" href="/login" class="nav-item nav-link">Login</a>
                     <a sec:authorize="hasRole('BUYER')" href="/orderHistory" class="nav-item nav-link">Order History</a>
                     <a sec:authorize="hasRole('BUYER')" href="/orderCart" class="nav-item nav-link">Your Cart</a>
