--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -29,10 +29,10 @@
       <div class="container d-flex flex-wrap justify-content-center ">
         <th:block th:each="restaurantDto : ${restaurantDtoList}">
           <a th:href="@{/restaurant/{x}(x=${restaurantDto.id})}" class="nav-link m-0 p-0 btn-outline-light">
-            <div class="card bg-light text-dark m-3" style="width:300px">
-              <h4 class="card-header" th:text="${restaurantDto.name}"></h4>
-              <img th:src="${restaurantDto.logo}" alt="Imagine product" style="background: bisque">
-              <div class="card-footer" th:text="${restaurantDto.restaurantSpecific}"></div>
+            <div class="card bg-light text-dark m-3 wrapper_custom" >
+              <h4 class="card-header" th:text="${restaurantDto.name}" style="height: 30%; overflow: auto;"></h4>
+              <img th:src="${restaurantDto.logo}" alt="Imagine product" class="img-fluid" style="height: 50%;">
+              <div class="card-footer" th:text="${restaurantDto.restaurantSpecific}" style="height: 20%; overflow: auto;"></div>
             </div>
           </a>
         </th:block>
