--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,6 +5,7 @@
     <title>Login Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
     <style>
         .m-4{
             text-align: center;
@@ -16,23 +17,6 @@
 </head>
 <body>
 <div th:insert="fragments/navBar"></div>
-<!--<div class="m-4" >-->
-<!--    <h1>Login</h1>-->
-<!--    <form th:object="${loginDto}"  action="/login" method="post">-->
-<!--        <div class="mb-3">-->
-<!--            <label class="form-label" for="email">Email</label>-->
-<!--            <input th:field="*{email}" type="text" class="form-control" id="email" placeholder="Email" name="username" required>-->
-<!--        </div>-->
-<!--        <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>-->
-<!--        <div class="mb-3">-->
-<!--            <label class="form-label" for="password">Password</label>-->
-<!--            <input th:field="*{password}" type="password" class="form-control" id="password" placeholder="Password" name="password" required>-->
-<!--        </div>-->
-<!--        <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>-->
-<!--        <button type="submit" class="btn btn-primary">LOGIN</button>-->
-<!--        <div th:text="${loginMessage}"></div>-->
-<!--    </form>-->
-<!--</div>-->
 
 <div class="m-4" >
     <h1>Login</h1>
