--- a/src/main/resources/templates/orderCart.html
+++ b/src/main/resources/templates/orderCart.html
@@ -9,110 +9,122 @@
 </head>
 <body>
 <div th:insert="~{fragments/navBar.html :: body}"></div>
-
-<section class="h-100 gradient-custom">
-    <div class="container py-5">
-        <div class="row d-flex justify-content-center my-4">
-            <div class="col-md-8">
-                <div class="card mb-4">
-                    <div class="card-header py-3">
-                        <h5 class="mb-0">Order</h5>
-                    </div>
-                    <th:block th:each="orderCartEntryDto : ${orderCartEntryDtoList}">
-                        <div class="card-body">
-
-                            <hr class="my-4"/>
-                            <!-- Single item -->
-                            <div class="row">
-                                <div class="col-lg-3 col-md-12 mb-4 mb-lg-0">
-                                    <div class="bg-image hover-overlay hover-zoom ripple rounded"
-                                         data-mdb-ripple-color="light">
-                                        <img th:src="${orderCartEntryDto.dishDto.image}"
-                                             class="w-100"/>
-                                    </div>
-
-                                </div>
-                                <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
-                                    <!-- Data -->
-                                    <p><strong th:text="${orderCartEntryDto.dishDto.name}"></strong></p>
-                                    <p th:text="${orderCartEntryDto.dishDto.description}"></p>
-                                    <p th:text="'Cooking Time: ' + ${orderCartEntryDto.dishDto.cookingTime} + ' min'"></p>
-
-                                </div>
-
-                                <div class="col-lg-4 col-md-6 mb-4 v">
-                                    <!-- Quantity -->
-                                    <label class="form-label" for="form1">Quantity</label>
-                                    <div class="d-flex mb-4" style="max-width: 300px">
-                                        <a th:href="@{'/orderCart/decrease/' + ${orderCartEntryDto.id}}"
-                                           class="btn btn-primary px-3 py-2 ms-1 order-quantity-change">-</a>
-                                        <div class="form-outline order-cart-quantity">
-                                            <input th:value="${orderCartEntryDto.quantity}" id="form1" min="0"
-                                                   name="quantity" type="number"
-                                                   class="form-control"/>
-
-                                        </div>
-                                        <a th:href="@{'/orderCart/increase/' + ${orderCartEntryDto.id}}"
-                                           class="btn btn-primary px-3 py-2 ms-1 order-quantity-change">
-                                           +
-                                        </a>
-
-                                    </div>
-
-
-                                    <!-- Quantity -->
-
-                                    <!-- Price -->
-
-                                    <div class="d-flex " style="max-width: 300px">
-                                        <p class="text-start me-3">
-                                            <strong th:text="'Price: ' + (${orderCartEntryDto.dishDto.price} * ${orderCartEntryDto.quantity})"></strong>
-                                        </p>
-
-                                    </div>
-
-                                    <form>
-                                        <a th:href="@{'/cartEntry/remove/' + ${orderCartEntryDto.id}}" class="btn btn-primary px-5" style="border-left: 20px">Remove
-                                        </a>
-                                    </form>
-
-
-                                    <!-- Price -->
-                                </div>
-                            </div>
-                            <!-- Single item -->
-                        </div>
-                    </th:block>
-                </div>
-
-            </div>
-            <div class="col-md-4">
-                <div class="card mb-4">
-                    <div class="card-header py-3">
-                        <h5 class="mb-0">Summary</h5>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-group list-group-flush">
-                            <li
-                                    class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
-                                <div>
-                                    <strong>Total amount</strong>
-                                </div>
-                                <span><strong th:text="${orderTotalAmount.totalAmount} + ' RON'"></strong></span>
-                            </li>
-                        </ul>
-
-                        <a href="/sendFoodOrder"  type="button" class="btn btn-primary  btn-block">
-                            Send order
-                        </a>
-                        <a th:href="@{${'/restaurant/' + restaurantId}}"  type="button" class="btn btn-primary  btn-block">
-                            Back to restaurant
-                        </a>
-                    </div>
-                </div>
-            </div>
+<div th:object="${orderCartEntryDtoList}">
+    <div th:if="${orderCartEntryDtoList.size() == 0}">
+        <div class="m-4" >
+            <h2>YOUR CART IS EMPTY!</h2>
+            <a href="/home" type="button" class="btn btn-primary btn-lg">Back to home</a>
         </div>
     </div>
-</section>
+    <div th:if="${orderCartEntryDtoList.size() > 0}">
+        <section class="h-100 gradient-custom">
+            <div class="container py-5">
+                <div class="row d-flex justify-content-center my-4">
+                    <div class="col-md-8">
+                        <div class="card mb-4">
+                            <div class="card-header py-3">
+                                <h5 class="mb-0">Order</h5>
+                            </div>
+                            <th:block th:each="orderCartEntryDto : ${orderCartEntryDtoList}">
+                                <div class="card-body">
+
+                                    <hr class="my-4"/>
+                                    <!-- Single item -->
+                                    <div class="row">
+                                        <div class="col-lg-3 col-md-12 mb-4 mb-lg-0">
+                                            <div class="bg-image hover-overlay hover-zoom ripple rounded"
+                                                 data-mdb-ripple-color="light">
+                                                <img th:src="${orderCartEntryDto.dishDto.image}"
+                                                     class="w-100"/>
+                                            </div>
+
+                                        </div>
+                                        <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
+                                            <!-- Data -->
+                                            <p><strong th:text="${orderCartEntryDto.dishDto.name}"></strong></p>
+                                            <p th:text="${orderCartEntryDto.dishDto.description}"></p>
+                                            <p th:text="'Cooking Time: ' + ${orderCartEntryDto.dishDto.cookingTime} + ' min'"></p>
+
+                                        </div>
+
+                                        <div class="col-lg-4 col-md-6 mb-4 v">
+                                            <!-- Quantity -->
+                                            <label class="form-label" for="form1">Quantity</label>
+                                            <div class="d-flex mb-4" style="max-width: 300px">
+                                                <a th:href="@{'/orderCart/decrease/' + ${orderCartEntryDto.id}}"
+                                                   class="btn btn-primary px-3 py-2 ms-1 order-quantity-change">-</a>
+                                                <div class="form-outline order-cart-quantity">
+                                                    <input th:value="${orderCartEntryDto.quantity}" id="form1" min="0"
+                                                           name="quantity" type="number"
+                                                           class="form-control"/>
+
+                                                </div>
+                                                <a th:href="@{'/orderCart/increase/' + ${orderCartEntryDto.id}}"
+                                                   class="btn btn-primary px-3 py-2 ms-1 order-quantity-change">
+                                                    +
+                                                </a>
+
+                                            </div>
+
+
+                                            <!-- Quantity -->
+
+                                            <!-- Price -->
+
+                                            <div class="d-flex " style="max-width: 300px">
+                                                <p class="text-start me-3">
+                                                    <strong th:text="${orderCartEntryDto.cost} + ' RON'"></strong>
+                                                </p>
+
+                                            </div>
+
+                                            <form>
+                                                <a th:href="@{'/cartEntry/remove/' + ${orderCartEntryDto.id}}"
+                                                   class="btn btn-primary px-5" style="border-left: 20px">Remove
+                                                </a>
+                                            </form>
+
+
+                                            <!-- Price -->
+                                        </div>
+                                    </div>
+                                    <!-- Single item -->
+                                </div>
+                            </th:block>
+                        </div>
+
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4">
+                            <div class="card-header py-3">
+                                <h5 class="mb-0">Summary</h5>
+                            </div>
+                            <div class="card-body">
+                                <ul class="list-group list-group-flush">
+                                    <li
+                                            class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
+                                        <div>
+                                            <strong>Total amount</strong>
+                                        </div>
+                                        <span><strong
+                                                th:text="${orderTotalAmount.totalAmount} + ' RON'"></strong></span>
+                                    </li>
+                                </ul>
+
+                                <a href="/sendFoodOrder" type="button" class="btn btn-primary  btn-block">
+                                    Send order
+                                </a>
+                                <a th:href="@{${'/restaurant/' + restaurantId}}" type="button"
+                                   class="btn btn-primary  btn-block">
+                                    Back to restaurant
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+</div>
 </body>
 </html>
