--- a/src/main/resources/templates/orderHistory.html
+++ b/src/main/resources/templates/orderHistory.html
@@ -5,35 +5,36 @@
     <title>Order History</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-        .bg-cyan {
-            background-color: #857b11;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/style.css">
+<!--    <style>-->
+<!--        .bg-cyan {-->
+<!--            background-color: #857b11;-->
+<!--        }-->
+<!--    </style>-->
 </head>
 <body>
 <div th:insert="~{fragments/navBar.html :: body}"></div>
 <div class="container-fluid mt-3">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm bg-cyan text-white p-3">
-                <a th:href="@{/home}" class="btn btn-outline-dark text-dark">Back to HOME</a>
+            <div class="col-sm-12 bg-dark p-3">
+                <a th:href="@{/home}" class="btn btn-primary">Back to HOME</a>
             </div>
             <div class="col-sm bg-cyan text-white p-3"></div>
         </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid text-bg-secondary py-3">
         <h2>Order history</h2>
-        <table class="table table-hover ">
+        <table class="table table-hover text-white fw-bold ">
             <thead>
             <tr>
-                <th>Date and time</th>
-                <th>Order No.</th>
-                <th>Restaurant</th>
-                <th>Total amount</th>
-                <th>Status</th>
-                <th>Details</th>
+                <th class="fs-4">Date and time</th>
+                <th class="fs-4">Order No.</th>
+                <th class="fs-4">Restaurant</th>
+                <th class="fs-4">Total amount</th>
+                <th class="fs-4">Status</th>
+                <th class="fs-4">Details</th>
             </tr>
             </thead>
             <tbody>
