--- a/src/main/resources/templates/viewOrder.html
+++ b/src/main/resources/templates/viewOrder.html
@@ -10,14 +10,14 @@
 <body>
 <div th:insert="~{fragments/navBar.html :: body}"></div>
 
-<section class="h-100 h-custom" style="background-color: #eee;">
+<section class="h-100 h-custom " >
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-lg-8 col-xl-6">
-                <div class="card border-top border-bottom border-3" style="border-color: #f37a27 !important;">
+                <div class="card border-top border-bottom border-3" style="border-color: black !important;">
                     <div class="card-body p-5">
 
-                        <p class="lead fw-bold mb-5" style="color: #f37a27;">Order details</p>
+                        <p class="lead fw-bold mb-5" >Order details</p>
 
                         <div class="row">
                             <div class="col mb-3">
@@ -31,26 +31,25 @@
                         </div>
 
                         <div class="mx-n5 px-5 py-4" style="background-color: #f2f2f2;">
-                            <th:block th:each="orderEntryDto : ${orderEntryDtoList}">
+                            <th:block th:each="orderCartEntryDto : ${orderCartEntryDtoList}">
                                 <div class="row">
                                     <div class="col-md-8 col-lg-9">
-                                        <p th:text="${orderEntryDto.quantity + ' X ' + orderEntryDto.dishName}"></p>
+                                        <p th:text="${orderCartEntryDto.quantity + ' X ' + orderCartEntryDto.dishDto.name}"></p>
                                     </div>
                                     <div class="col-md-4 col-lg-3">
-                                        <p th:text="${orderEntryDto.costPerDish + ' RON'}"></p>
+                                        <p th:text="${orderCartEntryDto.cost + ' RON'}"></p>
                                     </div>
                                 </div>
                             </th:block>
                         </div>
 
                         <div class="row my-4">
-                            <div class="col-md-4 offset-md-8 col-lg-3 offset-lg-9">
-                                <p th:text="${foodOrderDto.totalAmount} + ' RON'" class="lead fw-bold mb-0"
-                                   style="color: #f37a27;"></p>
+                            <div class="col-md-6 offset-md-6 col-lg-6 offset-lg-6">
+                                <p th:text="'Total amount: ' + ${foodOrderDto.totalAmount} + ' RON'" class="lead fw-bold mb-0"></p>
                             </div>
                         </div>
 
-                        <p class="lead fw-bold mb-4 pb-2" style="color: #f37a27;">Order Status</p>
+                        <p class="lead fw-bold mb-4 pb-2 text-color-black">Order Status</p>
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="horizontal-timeline">
