--- a/src/main/resources/templates/restaurant.html
+++ b/src/main/resources/templates/restaurant.html
@@ -11,6 +11,7 @@
 <!--<div th:insert="fragments/navBar"></div>-->
 <div th:insert="~{fragments/navBar.html :: body}"></div>
 
+
 <div th:object="${restaurantDto}" class="container p-1 my-5" >
     <div class="card " style="border-radius: 100px">
         <img class="card-img-fluid w-auto h-auto restaurant_custom_img " style="border-radius: 100px"
@@ -24,9 +25,10 @@
                 <div class="card-body" th:text="${restaurantDto.restaurantSpecific}"></div>
                 <div class="card-body" th:text="${restaurantDto.address}"></div>
                 <div class="card-body" th:text="${restaurantDto.phoneNo}"></div>
+
             </div>
         </div>
-
+        <img class="card-img" style="object-fit: cover; width: 100%; height: 100%;" th:src="${restaurantDto.backgroundImage}">
     </div>
 </div>
 <div class="mx-auto" style="border-top-style: solid; width: 65%"></div>
