--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -9,6 +9,10 @@ form{
     color: red;
 }
 
+.restaurant-header-footer {
+    background: #f37a27;
+}
+
 /*.navbar-right {*/
 /*    display: flex;*/
 /*    margin-right: 0;*/
@@ -100,6 +104,13 @@ body{
 .wrapper_custom img {
     object-fit: cover; /* this makes the image to cover all the div */
     width: 100%;
+}
+
+.error-container {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+
 }
 
 
