--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -29,10 +29,12 @@
       <div class="container d-flex flex-wrap justify-content-center ">
         <th:block th:each="restaurantDto : ${restaurantDtoList}">
           <a th:href="@{/restaurant/{x}(x=${restaurantDto.id})}" class="nav-link m-0 p-0 btn-outline-light">
-            <div class="card bg-light text-dark m-3 wrapper_custom" >
-              <h4 class="card-header" th:text="${restaurantDto.name}" style="height: 30%; overflow: auto;"></h4>
-              <img th:src="${restaurantDto.logo}" alt="Imagine product" class="img-fluid" style="height: 50%;">
-              <div class="card-footer" th:text="${restaurantDto.restaurantSpecific}" style="height: 20%; overflow: auto;"></div>
+            <div class="card bg-light text-dark m-3 wrapper_custom" style="height: 300px">
+              <h4 class="card-header text-light restaurant-header-footer" th:text="${restaurantDto.name}" style="height: 30%; overflow: auto;"></h4>
+              <div class="logo-container" style="height: 180px; display: flex; align-items: center; justify-content: center; background: #f1cf9d">
+                <img th:src="${restaurantDto.logo}" alt="Restaurant Logo" class="img-fluid" style="max-height: 100%; max-width: 100%; object-fit: contain;">
+              </div>
+              <div class="card-footer text-light restaurant-header-footer" th:text="${restaurantDto.restaurantSpecific}" style="height: 20%; overflow: auto;"></div>
             </div>
           </a>
         </th:block>
