--- a/src/main/resources/templates/orderCart.html
+++ b/src/main/resources/templates/orderCart.html
@@ -6,6 +6,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/css/style.css">
+    <script>
+        function redirectToHome() {
+            alert("Your cart is empty!");
+            window.location.href = "/home";
+        }
+    </script>
 </head>
 <body>
 <div th:insert="~{fragments/navBar.html :: body}"></div>
@@ -16,6 +22,7 @@
             <a href="/home" type="button" class="btn btn-primary btn-lg">Back to home</a>
         </div>
     </div>
+
     <div th:if="${orderCartEntryDtoList.size() > 0}">
         <section class="h-100 gradient-custom">
             <div class="container py-5">
