--- a/src/main/resources/templates/sellerPage.html
+++ b/src/main/resources/templates/sellerPage.html
@@ -24,14 +24,14 @@
 </nav>
 
 <div class="container my-3 2-70" style="text-align: left;">
-    <div class="container my-4">
+    <div class="container my-4 restaurant-container">
         <div class="container d-flex flex-wrap justify-content-center ">
             <th:block th:each="restaurantDto : ${restaurantDtoList}">
                 <a th:href="@{/restaurant/{x}(x=${restaurantDto.id})}" class="nav-link m-0 p-0 btn-outline-light">
-                    <div class="card bg-light text-dark m-3" style="width:300px">
-                        <h4 class="card-header" th:text="${restaurantDto.name}"></h4>
-                        <img th:src="${restaurantDto.logo}" alt="Restaurant Logo" style="background: bisque; height: 150px">
-                        <div class="card-footer" th:text="${restaurantDto.restaurantSpecific}"></div>
+                    <div class="card bg-light text-dark m-3 wrapper_custom" style="width:300px">
+                        <h4 class="card-header" th:text="${restaurantDto.name}" style="height: 30%; overflow: auto;"></h4>
+                        <img th:src="${restaurantDto.logo}" alt="Restaurant Logo" class="img-fluid" style="height: 50%;">
+                        <div class="card-footer" th:text="${restaurantDto.restaurantSpecific}" style="height: 20%; overflow: auto;"></div>
                     </div>
                 </a>
             </th:block>
