--- a/src/main/resources/templates/forgotPassword.html
+++ b/src/main/resources/templates/forgotPassword.html
@@ -20,22 +20,12 @@
 
 <div class="m-4" >
     <h1>Login</h1>
-
-    <div th:if="${param.error}" class="alert alert-danger">
-        <p>Invalid username or password</p>
-    </div>
-
-    <form action="/login" method="post">
+    <form action="/forgotPassword" method="post">
         <div class="mb-3">
             <label class="form-label" for="email">Email</label>
-            <input type="email" class="form-control" id="email" placeholder="Email" name="username" required>
+            <input th:field="*{emailDto.email}" type="email" class="form-control" id="email" placeholder="Email" name="username" required>
         </div>
-        <div class="mb-3">
-            <label class="form-label" for="password">Password</label>
-            <input type="password" class="form-control" id="password" placeholder="Password" name="password" required>
-        </div>
-        <button type="submit" class="btn btn-primary">LOGIN</button>
-        <a th:href="@{/forgotPassword}" class="btn btn-primary">FORGOT PASSWORD</a>
+        <button type="submit" class="btn btn-primary">FORGOT PASSWORD</button>
     </form>
 </div>
 
