--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -5,11 +5,11 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-<!--    <link rel="stylesheet" href="/css/style.css">-->
+    <!--    <link rel="stylesheet" href="/css/style.css">-->
 </head>
 <body>
 <div class="m-4">
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark "  style="border-radius: 150px"  >
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark " style="border-radius: 150px">
         <div class="container-fluid">
             <a href="/home" class="navbar-brand">
                 <img class="navbar-logo" src="/img/quick_bite.png" style="height: 150px;  ">
@@ -19,16 +19,22 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div  th:object="${userDto}" class="navbar-nav">
-                    <a href="/yourProfile" th:if="${fullName != null}" th:text="${fullName}" class="nav-item nav-link" style="font-weight: bold; color: White;">Your Profile</a>
-                    <a  th:object="${activePage}" th:if="${activePage != '/sellerPage'}" sec:authorize="hasRole('SELLER')" href="/sellerPage" class="nav-item nav-link">Your Restaurants</a>
-                    <a  th:object="${activePage}" th:if="${activePage == '/sellerPage'}" sec:authorize="hasRole('SELLER')" href="/addRestaurant" class="nav-item nav-link">Add Restaurant</a>
-                    <a sec:authorize="hasRole('SELLER')" href="/orderDashboard" class="nav-item nav-link">Order Dashboard</a>
+                <div th:object="${userDto}" class="navbar-nav">
+                    <a href="/yourProfile" th:if="${fullName != null}" th:text="${fullName}" class="nav-item nav-link"
+                       style="font-weight: bold; color: White;">Your Profile</a>
+                    <a sec:authorize="hasRole('SELLER')" href="/sellerPage" class="nav-item nav-link">Your
+                        Restaurants</a>
+                    <a sec:authorize="hasRole('SELLER')" href="/addRestaurant" class="nav-item nav-link">Add
+                        Restaurant</a>
+                    <a sec:authorize="hasRole('SELLER')" href="/orderDashboard" class="nav-item nav-link">Order
+                        Dashboard</a>
                 </div>
                 <div class="navbar-nav ms-auto mx-5">
                     <a sec:authorize="isAnonymous()" href="/login" class="nav-item nav-link">Login</a>
                     <a sec:authorize="hasRole('BUYER')" href="/orderHistory" class="nav-item nav-link">Order History</a>
-                    <a sec:authorize="hasRole('BUYER')" href="/orderCart" class="nav-item nav-link">Your Cart</a>
+                    <a sec:authorize="hasRole('BUYER')" href="/orderCart" class="nav-item nav-link">
+                        Your Cart <span class="badge bg-primary" th:text="${session.cartItemCount}"></span>
+                    </a>
                     <a sec:authorize="isAnonymous()" href="/registration" class="nav-item nav-link">Registration</a>
                     <a sec:authorize="isAuthenticated()" href="/logout" class="nav-item nav-link">Logout</a>
                 </div>
