--- a/src/main/resources/templates/restaurant.html
+++ b/src/main/resources/templates/restaurant.html
@@ -10,7 +10,14 @@
 <body>
 <!--<div th:insert="fragments/navBar"></div>-->
 <div th:insert="~{fragments/navBar.html :: body}"></div>
-
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12 bg-dark p-3">
+            <a th:href="@{/home}" class="btn btn-primary">Back to HOME</a>
+        </div>
+        <div class="col-sm bg-cyan text-white p-3"></div>
+    </div>
+</div>
 
 <div th:object="${restaurantDto}" class="container p-1 my-5" >
     <div class="card " style="border-radius: 100px">
