--- a/src/main/resources/templates/restaurant.html
+++ b/src/main/resources/templates/restaurant.html
@@ -45,6 +45,9 @@
         <li class="nav-item px-3">
             <a class="btn btn-outline-dark"  th:href="@{/editRestaurant/{x} (x=${restaurantId})}">Edit Restaurant</a>
         </li>
+        <li class="nav-item px-3">
+            <a class="btn btn-outline-dark"  th:href="@{/removeRestaurant/{x} (x=${restaurantId})}">Remove Restaurant</a>
+        </li>
     </ul>
 </nav>
 
