--- a/src/main/resources/templates/orderCart.html
+++ b/src/main/resources/templates/orderCart.html
@@ -32,6 +32,8 @@
                             <div class="card-header py-3">
                                 <h5 class="mb-0">Order</h5>
                             </div>
+                            <th:block th:each="">
+                                <div>Restaurant name</div>
                             <th:block th:each="orderCartEntryDto : ${orderCartEntryDtoList}">
                                 <div class="card-body">
 
@@ -97,6 +99,7 @@
                                     </div>
                                     <!-- Single item -->
                                 </div>
+                            </th:block>
                             </th:block>
                         </div>
 
