--- a/src/main/resources/templates/orderHistory.html
+++ b/src/main/resources/templates/orderHistory.html
@@ -35,6 +35,7 @@
                 <th class="fs-4">Total amount</th>
                 <th class="fs-4">Status</th>
                 <th class="fs-4">Details</th>
+                <th class="fs-4">Review</th>
             </tr>
             </thead>
             <tbody>
@@ -48,7 +49,12 @@
                         <td th:text="${foodOrderDto.status}"></td>
                         <td >
                             <a th:href="@{/orderHistory/foodOrder/{x} (x=${foodOrderDto.foodOrderId})}" >
-                                <button type="button" class="btn btn-primary btn-sm" th:text="Details"></button>
+                                <button type="button" class="btn btn-primary btn-sm" >Details</button>
+                            </a>
+                        </td>
+                        <td  >
+                            <a th:href="@{/restaurant/review/{x}(x=${foodOrderDto.restaurantId})}">
+                                <button type="button" class="btn btn-primary btn-sm" >Add review</button>
                             </a>
                         </td>
                     </tr>
