--- a/src/main/resources/templates/addReviewPage.html
+++ b/src/main/resources/templates/addReviewPage.html
@@ -11,7 +11,7 @@
 <div th:insert="fragments/navBar"></div>
 <div class="m-4" >
     <h1>Add review</h1>
-    <form th:object="${feedbackDto}"  th:action="@{'/restaurant/review/' + ${restaurantId}}" method="post">
+    <form th:object="${feedbackDto}"  th:action="@{'/restaurant/review/' + ${restaurantId} + '/' + ${foodOrderId}}" method="post">
         <div class="mb-3">
             <label class="form-label" for="rating">Rating</label>
             <input th:field="*{rating}" type="number" class="form-control" min="1" max="5" id="rating">
