--- a/src/main/resources/templates/orderHistory.html
+++ b/src/main/resources/templates/orderHistory.html
@@ -6,11 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/css/style.css">
-    <!--    <style>-->
-    <!--        .bg-cyan {-->
-    <!--            background-color: #857b11;-->
-    <!--        }-->
-    <!--    </style>-->
+
 </head>
 <body>
 <div th:insert="~{fragments/navBar.html :: body}"></div>
@@ -42,23 +38,28 @@
             <th:block th:object="${foodOrderDtoList}" th:each="foodOrderDto : ${foodOrderDtoList}">
 
 
-                    <tr>
-                        <td th:text="${foodOrderDto.date}"></td>
-                        <td th:text="${foodOrderDto.foodOrderId}"></td>
-                        <td th:text="${foodOrderDto.restaurantName}"></td>
-                        <td th:text="${foodOrderDto.totalAmount + ' RON'}"></td>
-                        <td th:text="${foodOrderDto.status}"></td>
-                        <td >
-                            <a th:href="@{/orderHistory/foodOrder/{x} (x=${foodOrderDto.foodOrderId})}" >
-                                <button type="button" class="btn btn-primary btn-sm" >Details</button>
-                            </a>
-                        </td>
-                        <td  >
-                            <a th:href="@{/restaurant/review/{x}(x=${foodOrderDto.restaurantId})}">
-                                <button type="button" class="btn btn-primary btn-sm" >Add review</button>
-                            </a>
-                        </td>
-                    </tr>
+                <tr>
+                    <td th:text="${foodOrderDto.date}"></td>
+                    <td th:text="${foodOrderDto.foodOrderId}"></td>
+                    <td th:text="${foodOrderDto.restaurantName}"></td>
+                    <td th:text="${foodOrderDto.totalAmount + ' RON'}"></td>
+                    <td th:text="${foodOrderDto.status}"></td>
+                    <td>
+                        <a th:href="@{/orderHistory/foodOrder/{x} (x=${foodOrderDto.foodOrderId})}">
+                            <button type="button" class="btn btn-primary btn-sm">Details</button>
+                        </a>
+                    </td>
+                    <td>
+
+
+                        <a th:if="${foodOrderDto.rated=='active'}" class="btn btn-primary btn-sm" th:href="@{'/restaurant/review/' + ${foodOrderDto.restaurantId} + '/' + ${foodOrderDto.foodOrderId}}">Add Review
+                        </a>
+                        <a th:if="${foodOrderDto.rated=='disabled'}" class="btn btn-primary btn-sm disabled" th:href="@{/restaurant/review/{x}(x=${foodOrderDto.restaurantId})}">Add Review
+                        </a>
+                        <a th:if="${foodOrderDto.rated=='rated'}" class="btn btn-primary btn-sm disabled" th:href="@{/restaurant/review/{x}(x=${foodOrderDto.restaurantId})}">RATED
+                        </a>
+                    </td>
+                </tr>
 
             </th:block>
             </tbody>
