--- a/src/main/resources/templates/orderCart.html
+++ b/src/main/resources/templates/orderCart.html
@@ -32,7 +32,7 @@
                             <div class="card-header py-3">
                                 <h5 class="mb-0">Order</h5>
                             </div>
-                            <th:block th:each="">
+<!--                            <th:block th:each="">-->
                                 <div>Restaurant name</div>
                             <th:block th:each="orderCartEntryDto : ${orderCartEntryDtoList}">
                                 <div class="card-body">
@@ -100,7 +100,7 @@
                                     <!-- Single item -->
                                 </div>
                             </th:block>
-                            </th:block>
+<!--                            </th:block>-->
                         </div>
 
                     </div>
