--- a/src/main/resources/templates/restaurant.html
+++ b/src/main/resources/templates/restaurant.html
@@ -32,6 +32,18 @@
                 <div class="card-body" th:text="${restaurantDto.restaurantSpecific}"></div>
                 <div class="card-body" th:text="${restaurantDto.address}"></div>
                 <div class="card-body" th:text="${restaurantDto.phoneNo}"></div>
+                <div class="card-body text-white">
+
+                    <span class="rating">
+                        <span class="star filled" th:each="i : ${#numbers.sequence (1,  restaurantAvgRatingDto.averageRatingInt)}"></span>
+                        <span th:if="${restaurantAvgRatingDto.averageRatingDouble.length() > 1}" class="star half"></span>
+                    </span>
+                </div>
+                <div class="card-body" >
+                    <p strong th:text="${restaurantAvgRatingDto.averageRatingDouble}" >
+
+                    </p>
+                </div>
             </div>
         </div>
     </div>
@@ -56,7 +68,7 @@
 <nav  sec:authorize="hasRole('BUYER')" class="navbar navbar-expand-sm justify-content-center category-nav" >
     <ul class="navbar-nav category-nav">
         <li class="nav-item px-3">
-            <a class="btn btn-outline-dark" th:href="@{/restaurant/rating/{x} (x=${restaurantId})}">Go to reviews</a>
+            <a class="btn btn-outline-dark" th:href="@{/restaurant/{x}/reviews-page (x=${restaurantId})}">Go to reviews</a>
         </li>
     </ul>
 </nav>
